test/patterns/s0191_number_of_1_bits/hafis/starchat/syntax_checking.txt
./test/s0191_number_of_1_bits/hafis/starchat/build/Solution.java:16: error: integer number too large
//@ ensures((n == 11111111111111111111111111111101) ==> (\result == 31));
                  ^
1 error
